@@ -1,5 +1,10 @@
 2020-01-22  Jakub Jelinek  <jakub@redhat.com>
 
+	PR target/93335
+	* gcc.c-torture/compile/pr93335.c: New test.
+
+2020-01-22  Jakub Jelinek  <jakub@redhat.com>
+
 	PR target/91298
 	* gcc.target/i386/pr91298-1.c: New test.
 	* gcc.target/i386/pr91298-2.c: New test.
